stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_expected_response_type.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "929564fbccaf2174d21056404f18ec5e56708f955afe3987de50cdd83374b81b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1ae7c4bd1fcab957edfd7303fe992f234e665f50271f36b8eab760325f895fe0",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "11a32b5ba48d3d769bc62112cbe4d83a138f1bde8439fea6ee1b69cb600b44dd",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "94ef4a3e4d85f8960043150ce1d5c2a6f254f93169579eb67452d4bbbf298d4e",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f24efc97f14afadd8cdbe0b985f964b8935d1ff1265a364294ec24ff951cf8f3",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f9dba0b06dad04a7117d13f3d6e2707034a7f2c708b9d476b4fad6cb2672a8cf",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1b5a27efbe86126b5163af17baa47f36e14decf61ebb42c389860c3e7a73236e",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9b3bcf91a93a0f7b65b21a7d29f2c30ccaffff1df171a78f2001cd51e9a14138",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c7765bb9f2ada80ce6d2a6a7b14df42b5956cdfd86081d75f6bafb8d0815063b",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "68f31345d541f44f5b0a9ea6ebf589cbe1c9306b41092339b2407689339c05a2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "51cba56c978fe613ea11260cf8eeb3436ccb8d833a0f56b9c0639b6783beb5ee",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
]
